# neural-scope

./: .readthedocs.yaml  CLI.md  CONTRIBUTING.md  IMAGES.md  LIBRARY.md  MANIFEST.in  README.md  README_CICD_INTEGRATION.md  RELEASE_NOTES.md  __init__.py  activate_venv.bat  activate_venv.sh  analyzer.py  app.py  cli.py  custom_model_config.yaml  fetch_and_analyze.py  mlflow_integration_summary.md  model_analysis_config.yaml  neural_scope_cicd.py  optimization_results.json  publish.py  pypi_publication_summary.md  pyproject.toml  requirements.txt  run_neural_scope.py  setup.cfg  setup.py  setup_cicd.py  setup_mlflow.py  simple_test.py  static_analysis.py  test_implementation.py  test_mlflow_integration.py  test_real_model.py  test_with_mlflow.py
.github/workflows/: benchmark.yml  ci.yml  dependency-scan.yml  docs.yml  model_optimization.yml  neural_scope_cicd.yml  publish.yml
advanced_analysis/: __init__.py  analyzer.py  cli.py  cloud_cost_optimizer.py  cloud_profiler.py  data_guardian_enterprise.py  dataset_optimizer.py  enhanced_performance_optimization.py  ml_based_suggestions.py  ml_dataguardian.py  model_analyzer.py  more_performance_optimizations.py  multi_gpu_profiler.py  performance_optimization.py  roofline_analyzer.py  version.py
advanced_analysis/algorithm_complexity/: static_analyzer.py
advanced_analysis/cloud/: cost_optimizer.py
advanced_analysis/data_quality/: guardian.py
advanced_analysis/ml_advisor/: algorithm_recognition.py  inefficiency_detection.py
advanced_analysis/ml_advisor/plugins/: torch_optimizer.py
advanced_analysis/performance/: core.py
aiml_complexity/: advanced_complexity_analyzer.py  algorithm_recognition.py  analysis.py  analyzer.py  complexity_analyzer.py  cpu_vectorization_profiler.py  data_guardian.py  data_guardian_enhancer.py  detectors.py  dynamic_analysis.py  inefficiency_detection.py  init.py  ml_based_suggestions3.py  ml_optimizations.py  ml_patterns.py  ml_performance_profiler.py  monitoring_dashboards.py  output.py  patterns.py  pg_storage.py  plotly_visualizer.py  processor_monitoring.py  profiling.py  static_analysis.py  storage.py
cloud/: aws_costs.py
docs/: DOCUMENTATION.md  README.txt  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  metric_analysis.md  quickstart.rst  readthedocs_setup_guide.md  requirements.txt
docs/_static/css/: custom.css
docs/archive/: neural_scope_summary.md  test_results_summary.md
docs/user_guide/: index.rst  model_analysis.rst
examples/: example_usage.py  ml_advisor_demo.ipynb
images/: README.md  placeholder.md
ml-toolkit/: README.md  requirements.txt  setup.py
ml-toolkit/dataguard/: __init__.py  cli.py  data_quality.py  preprocessing.py  visualization.py
ml-toolkit/dataguard/reporters/: __init__.py  html_reporter.py  pdf_reporter.py
ml-toolkit/optimizer/: cli.py  gpu_profiler.py  memory_profiler.py  performance.py
ml-toolkit/tests/: test_dataguard.py  test_optimizer.py  test_trainer.py
ml-toolkit/trainer/: cli.py  distillation.py  drift_analyzer.py  hyperparameter_tuning.py  quantization.py
ml-toolkit/visualization/: dashboard.py
mlartifacts/361382641994275266/13676e812d544393907f0aedd6eb0966/artifacts/: analysis_results.json  comprehensive_report.html
mlartifacts/871849653719086995/b906796d4b444c69ba86753cd0620535/artifacts/: comprehensive_report.html  comprehensive_report.json
mlartifacts/871849653719086995/db5b6243c1be422aa3d7dafb15902f0b/artifacts/: comprehensive_report.html  comprehensive_report.json
mlartifacts/871849653719086995/ed1aa6a9243c41aa89c0af1b7693a94a/artifacts/: comprehensive_report.html  comprehensive_report.json
mlruns/0/: meta.yaml
mlruns/361382641994275266/: meta.yaml
mlruns/361382641994275266/13676e812d544393907f0aedd6eb0966/: meta.yaml
mlruns/361382641994275266/14248e527ba4442ca3d5ef5daf2b8be0/: meta.yaml
mlruns/361382641994275266/c176e4a9dd1742779a34f7356f7f951d/: meta.yaml
mlruns/871849653719086995/: meta.yaml
mlruns/871849653719086995/b906796d4b444c69ba86753cd0620535/: meta.yaml
mlruns/871849653719086995/db5b6243c1be422aa3d7dafb15902f0b/: meta.yaml
mlruns/871849653719086995/ed1aa6a9243c41aa89c0af1b7693a94a/: meta.yaml
mlruns/models/densenet121/: meta.yaml
mlruns/models/mobilenet_v2/: meta.yaml
mlruns/models/resnet18/: meta.yaml
mlruns/models/resnet18-optimized/: meta.yaml
notebooks/: advanced_analysis_examples.ipynb
real_model_test/: comprehensive_report.html  comprehensive_report.json
scripts/: cli.py
security/: enhanced_adversarial_tester.py  enhanced_vulnerability_detector.py
test_results/: cloud_costs.json  complexity_analysis.json  comprehensive_report.json  memory_profile.json  metrics_verification.json  model_metrics.json  model_report.html  performance_monitoring.json  pruning_results.json  quantization_results.json  report.html  security_check.json
tests/: conftest.py  run_tests.py  test_analysis.py  test_analyzer.py  test_cli.py  test_end_to_end.py  test_model_analysis.py  test_profiling.py  test_storage.py
(+82 files in other folders)
