[metadata]
name = aiml_complexity
version = 1.0.0
description = AI/ML Complexity Analysis tool to detect inefficiencies and estimate computational and cloud costs.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = you@example.com
license = MIT
license_files = LICENSE
url = https://github.com/yourname/aiml_complexity
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = AI ML complexity analysis performance profiling AWS cost

[options]
packages = find:
python_requires = >=3.8
install_requires =
    # No mandatory external dependencies (uses Python stdlib)
    # e.g., if using AWS APIs: boto3>=1.20; but here optional
include_package_data = True

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=3.0
    flake8>=5.0
    black>=22.1

[options.entry_points]
console_scripts =
    aiml-complexity = aiml_complexity.cli:main
